--- a/MusicShare/src/pages/ReadPosts.css
+++ b/MusicShare/src/pages/ReadPosts.css
@@ -1,92 +1,19 @@
-.ReadPosts {
-     display: flex;
-   /*  grid-auto-flow: row;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 0px; */
-    flex-direction: column;
-    font-size: 10px;
-    background-color: rgba(0, 0, 0, 0.962); 
-    height: 100vh; /* Add this line */
+.header {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
 }
-.my-card {
-  margin-left: auto;
-  margin-right: auto;
+
+/* .nav {
+  position: absolute;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for a raised effect */
+
+
+.headerBtn {
+  margin: 30px;
 }
-/* .navbar {
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    /*left: 0;
-    width: 100%;
-    padding: 10px 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: space-between;
-    font-family:Avenir, "Century Gothic", sans-serif;
-    text-decoration: none;
-    align-items: center;
-    height: 50px;
-  } */
-
-  .navbar{
-    position: absolute;
-    flex-direction: row;
-    gap: 0;
-    top: 0;
-    display: flex;
-    justify-content: center; /* Horizontally center */
-    align-items: center; /* Vertically center */
-    text-align: center;
-    width: 100%;
-    transition: 0.7s ease-in-out;
-    background-color: white;
-    padding: 10px;
-    color: black;
-    height: 80px;
-    border-radius: 10px;
-  } 
-  
-  .navbar ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-  }
-  
-  .navbar ul li {
-    margin-right: 20px;
-  }
-  
-  .navbar ul li:last-child {
-    margin-right: 0;
-  }
-  
-  .navbar ul li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .navbar ul li a:hover {
-    text-decoration: underline;
-  }
-  
-  .headerBtn {
-    margin-left: auto;
-    margin-right: 50px;
-    margin-top: 50px;
-  }
-  .headerLink {
-    text-decoration: none;
-    color: white; /* Replace 'black' with your desired color */
-  }
-
-  input {
-    width: 500px;
-    height: 30px;
-    border-color: black;
-    margin-left: auto;
-  }
-
-  .link {
-    text-decoration: none;
-  }
