--- a/MusicShare/src/pages/ViewPost.css
+++ b/MusicShare/src/pages/ViewPost.css
@@ -4,7 +4,6 @@
     border-radius: 10px;
     margin-top: 20px;
     padding: 15px;
-    width: 80%;
     font-size: 20px;
 }
 
@@ -29,4 +28,20 @@
   }
   .secretKeyInput {
     width: 100%;
+  }
+  .btn {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .commentBox {
+    width: 100%;
+  }
+
+  .title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
   }
